[package]
name = "weedfs"
version = "0.1.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde={version="1.0", features=["derive"]}
thiserror="1.0"
anyhow="1.0"
reqwest={version="0.10", default-features=false, features=["json","stream"]}
url="2.1"
tokio={version="0.2", features=["rt-threaded", "macros"]}
futures="0.3"
bytes="0.5"
futures-util="0.3"

[dev-dependencies]
dotenv = "0.15.0"