[package]
name = "weedfs"
version = "0.2.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde={version="1.0", features=["derive"]}
thiserror="1.0"
anyhow="1.0"
reqwest={version="0.11", default-features=false, features=["json", "stream", "multipart"]}
url="2.1"
tokio={version="1.0", features=["rt-multi-thread", "macros"]}
futures="0.3"
bytes="1.0"
futures-util="0.3"

[dev-dependencies]
dotenv = "0.15.0"